--- a/donate.html
+++ b/donate.html
@@ -148,6 +148,7 @@
     color: #144872;
   }
   .bg-white_opaque-fade .ak-donate-step-1 .ak-step-number::after,
+  .bg-white_opaque-fade .ak-donate-step-2 .ak-step-number::after,
   .bg-white_opaque-fade .ak-donate-step-2 .ak-step-complete::after,
   .bg-white_opaque-fade .ak-donate-step-1 .ak-step-complete::after {
     background-color: #144872 !important;
