--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -16,6 +16,12 @@
 						class="ak-step-complete inline-dot bg-dkgray-trans hidden">✔</span>&nbsp;<span></span>
 					<input type="radio" id="ak-donate-step-2" class="hidden" name="ak-donate-step" value="2">
 				</label>
+				<label class="ak-donate-step ak-donate-step-3 hidden" for="ak-donate-step-3">
+					<span class="ak-step-number strong inline-dot bg-trans">3</span>
+					<span
+						class="ak-step-complete inline-dot bg-dkgray-trans hidden">✔</span>&nbsp;<span></span>
+					<input type="radio" id="ak-donate-step-3" class="hidden" name="ak-donate-step" value="3">
+				</label>
     	</div>
 			<div class="share-container">
 				<p id="action-pretitle" class="text-font-secondary"><span
@@ -113,6 +119,14 @@
 	padding-right: 0;
 }
 
+#afteraction-flow-share .ak-donate-step-2 {
+	display: flex;
+}
+
+.ak-donate-menu.tall {
+	height: 200px !important;
+}
+
 #afteraction-flow-share .ak-donate-menu .inline-dot.bg-dkgray-trans {
 	background-color: rgba(23, 41, 46, 0.6);
 }
@@ -132,7 +146,8 @@
 	align-items: center;
 }
 
-#afteraction-flow-share .ak-donate-step-1 .ak-step-number::after{
+#afteraction-flow-share .ak-donate-step-1 .ak-step-number::after,
+#afteraction-flow-share .ak-donate-menu.tall .ak-donate-step-2 .ak-step-number::after {
 	content: "";
 	position: absolute;
 	top: 100%;
@@ -144,7 +159,19 @@
 	z-index: 0;
 }
 
-#afteraction-flow-share .ak-donate-step-1 .ak-step-complete::after {
+#afteraction-flow-share .ak-donate-menu.tall .ak-donate-step-1 .ak-step-number::after,
+#afteraction-flow-share .ak-donate-menu.tall .ak-donate-step-2 .ak-step-number::after,
+#afteraction-flow-share .ak-donate-menu.tall .ak-donate-step-1 .ak-step-complete::after,
+#afteraction-flow-share .ak-donate-menu.tall .ak-donate-step-2 .ak-step-complete::after {
+	height: 50px !important;
+}
+
+#afteraction-flow-share .ak-step-complete {
+	font-size: 0.65em;
+}
+
+#afteraction-flow-share .ak-donate-step-1 .ak-step-complete::after,
+#afteraction-flow-share .ak-donate-menu.tall .ak-donate-step-2 .ak-step-complete::after {
 	content: " ";
 	position: absolute;
 	top: 100%;
@@ -227,32 +254,18 @@
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_bsk'});
       }
       var initialShareURL = e.target.href + '&source=share-ak-thanksflow-bsk';
-      var pageName = '{{ page.title }}';
+			var pageFollowup = '{{ page.followup.twitter_message }}';
       $.ajax({
         method: 'GET',
         url: initialShareURL,
       }).done(function(shareURL) {
-        var blueskyShareURL = `https://bsky.app/intent/compose?text=${pageName} ${shareURL}`;
+        var blueskyShareURL = `https://bsky.app/intent/compose?text=${pageFollowup} ${shareURL}`;
         window.open(blueskyShareURL);
       }).fail(function() {
-        var blueskyShareURL = `https://bsky.app/intent/compose?text=${pageName} ${window.location.href}`;
+        var blueskyShareURL = `https://bsky.app/intent/compose?text=${pageFollowup} ${window.location.href}`;
         window.open(blueskyShareURL);
       });
     });
-
-    function show_tick(current_step) {
-      // hide step number
-      $('#afteraction-flow-share input[name="ak-donate-step"]:checked')
-        .closest('label')
-        .find('span.ak-step-number')
-        .addClass('hidden');
-
-      // show tick
-      $('#afteraction-flow-share input[name="ak-donate-step"]:checked')
-        .closest('label')
-        .find('span.ak-step-complete')
-        .removeClass('hidden');
-    }
 
     $('#afteraction-flow-share .ak-donate-step-1').on('click', function(e) {
       $('#afteraction-flow-share .share-container').show();
@@ -266,7 +279,7 @@
 
     $('.find-ways-action').on('click', function(e) {
       $(`#afteraction-flow-share .ak-donate-step-1 input[name="ak-donate-step"]`).prop('checked', true);
-      show_tick(1);
+      show_share_tick();
       $('#afteraction-flow-share .share-container').hide();
       $('#afteraction-flow-share .post-share-container').show();
       if (typeof gtag !== 'undefined') {
@@ -277,7 +290,7 @@
 
     $('.more-campaigns').on('click', function(e) {
       $(`#afteraction-flow-share .ak-donate-step-2 input[name="ak-donate-step"]`).prop('checked', true);
-      show_tick(2);
+      show_share_tick();
       if (typeof gtag !== 'undefined') {
         // send google analytics event
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_more'});
@@ -290,7 +303,7 @@
         // send google analytics event
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_fb'});
       }
-      show_tick(1);
+      show_share_tick();
     });
   });
 </script>
