--- a/donate.html
+++ b/donate.html
@@ -14,6 +14,9 @@
 {% block content %}
 {% if page.custom_fields.after_action_next_step == "flow" %}
 <style>
+  body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
+    background: unset;
+  }
   #action-lead {
     max-width: 800px;
   }
@@ -145,6 +148,7 @@
     color: #144872;
   }
   .bg-white_opaque-fade .ak-donate-step-1 .ak-step-number::after,
+  .bg-white_opaque-fade .ak-donate-step-2 .ak-step-number::after,
   .bg-white_opaque-fade .ak-donate-step-2 .ak-step-complete::after,
   .bg-white_opaque-fade .ak-donate-step-1 .ak-step-complete::after {
     background-color: #144872 !important;
