--- a/donate.html
+++ b/donate.html
@@ -14,6 +14,10 @@
 {% block content %}
 {% if page.custom_fields.after_action_next_step == "flow" %}
 <style>
+  #body-mobile-background {
+    background-image: unset;
+  }
+
   body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
     background: unset;
   }
