--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -234,15 +234,16 @@
       }
       var initialShareURL = e.target.href + '&source=share-ak-thanksflow-em';
       var pageName = '{{ page.title }}';
+			var newTab = window.open('', '_blank');
       $.ajax({
         method: 'GET',
         url: initialShareURL,
       }).done(function(shareURL) {
         var mailtoURL = `mailto:?subject=${pageName}&body=${shareURL}`;
-        window.open(mailtoURL);
+        newTab.location.href = mailtoURL;
       }).fail(function() {
         var mailtoURL = `mailto:?subject=${pageName}&body=${window.location.href}`;
-        window.open(mailtoURL);
+        newTab.location.href = mailtoURL;
       });
 
     });
@@ -254,16 +255,16 @@
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_bsk'});
       }
       var initialShareURL = e.target.href + '&source=share-ak-thanksflow-bsk';
-			var pageFollowup = '{{ page.followup.twitter_message }}';
+			var newTab = window.open('', '_blank');
       $.ajax({
         method: 'GET',
         url: initialShareURL,
       }).done(function(shareURL) {
-        var blueskyShareURL = `https://bsky.app/intent/compose?text=${pageFollowup} ${shareURL}`;
-        window.open(blueskyShareURL);
+        var blueskyShareURL = `https://bsky.app/intent/compose?text=${shareURL}`;
+        newTab.location.href = blueskyShareURL;
       }).fail(function() {
-        var blueskyShareURL = `https://bsky.app/intent/compose?text=${pageFollowup} ${window.location.href}`;
-        window.open(blueskyShareURL);
+        var blueskyShareURL = `https://bsky.app/intent/compose?text=${window.location.href}`;
+        newTab.location.href = blueskyShareURL;
       });
     });
 
