--- a/thanks.html
+++ b/thanks.html
@@ -236,7 +236,7 @@
 	</style>
 	{% if action.source == "website" %}
 	<div id="afteraction-flow" style="visibility: hidden; left: -999px; position: absolute; height: 0; width: 0;">
-		<iframe id="donate-iframe" style="height: 110vh; width: 100vw;"></iframe>
+		<iframe id="donate-iframe" style="height: 110vh; width: 100vw;" scrolling="yes"></iframe>
 	</div>
 	{% endif %}
 
