Update mutation selector to be more selective

--- a/donate.html
+++ b/donate.html
@@ -2035,7 +2035,7 @@
       }, "https://act.350.org");
     });
 
-    const step3Div = document.querySelector('.ak-donate-area-step-3');
+    const step3Div = document.querySelector('.ak-donate-area-step-3.form-style-labelabove');
     const observer = new MutationObserver(() => {
       if ($('.ak-donate-area-step-3').is(':visible')) {
         $('.cant-donate-container').hide();
