Update thanks page to remove iFrame

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -682,8 +682,11 @@ jQuery(document).ready(function($){
 					}
 					const pageId = '{{ page.id }}';
 					const donateSourceCode = `aa_${pageId}_thanksflow`;
+					const pageName = '{{ page.name }}';
+					let currentQueryParams = window.location.search;
+					currentQueryParams += `&source=${donateSourceCode}&og_page_name=${pageName}&action_id=${actionID}&akid=${akid}`;
 					const donatePageEmbedURL = '{{ page.custom_fields.afteraction_donate_alternate_url }}' || 'https://act.350.org/donate/build';
-					window.location.href = `${donatePageEmbedURL}?source=${donateSourceCode}`;
+					window.location.href = `${donatePageEmbedURL}${currentQueryParams}`;
 				} else {
 					$('#afteraction-flow-share #ak-donate-step-1').prop('checked', true);
 					show_share_tick();
